# beholder-observer

./: .gitignore  .travis.yml  README.md  beholder-observer.cabal  stack.yaml
app/: Main.hs
app/BeholderObserverUi/: DocSet.qml  ListDocSets.qml  MainForm.ui.qml  ProjectItem.qml  ProjectSelect.qml  TestForm.ui.qml  main.qml  qml.qrc
src/: Example.hs
src/BeholderObserver/: AcidState.hs  Constant.hs  Controller.hs  Data.hs  Dispatch.hs  Views.hs
test/: AcidStateSpec.hs  AcidStateSpecDisabled.hs  Spec.hs  TestUtil.hs  WebSpec.hs
