name:                beholder-observer
version:             0.1.0.0
synopsis:            A tool to organize documents, doc properties and analysis.
description:         Please see README.md
homepage:            http://github.com/proegssilb/observer#readme
license:             Apache
license-file:        LICENSE
author:              minifig404
maintainer:          proegssilb@gmail.com
category:            application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable beholder-observer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , beholder-observer
  default-language:    Haskell2010

test-suite observer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , beholder-observer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/proegssilb/observer
