name:                beholder-observer
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/proegssilb/beholder-observer#readme
license:             BSD3
license-file:        LICENSE
author:              David Bliss
maintainer:          proegssilb@gmail.com
copyright:           (c) David Bliss, see LICENSE
category:            application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BeholderObserver.Dispatch,
                       BeholderObserver.Data,
                       BeholderObserver.Constant,
                       BeholderObserver.Views,
                       BeholderObserver.AcidState,
                       BeholderObserver.Controller
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai
                     , text
                     , bytestring
                     , blaze-html
                     , hspec
                     , hspec-wai
                     , transformers
                     , acid-state
                     , safecopy
                     , containers
                     , mtl
                     , random
                     , QuickCheck
  default-language:    Haskell2010

executable beholder-observer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 +RTS -N -RTS
  build-depends:       base
                     , beholder-observer
                     , scotty
  default-language:    Haskell2010

test-suite beholder-observer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -threaded -O2 +RTS -N -RTS
  main-is:             Main.hs
  other-modules:       WebSpec, AcidStateSpec, TestUtil
  build-depends:       base
                     , beholder-observer
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , scotty
                     , QuickCheck
                     , acid-state
                     , containers
                     , random
                     , text
                     , monad-parallel
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/proegssilb/beholder-observer
